Corrected how the initial base font size is calculated to address the issue with "culprits" becoming unreadable on certain screen resolutions. Further tweaks may be required so feedback is welcome!
Closes #190

--- a/src/main/webapp/less/module/widget/basic.less
+++ b/src/main/webapp/less/module/widget/basic.less
@@ -9,11 +9,11 @@
 
     & {
       header h2 {
-        font-size: 4em;
+        font-size: 2.5em;
       }
 
       .slots .slot {
-        font-size:     2em;
+        font-size:     1.5em;
         font-weight:   bold;
 
         text-overflow: ellipsis;
@@ -67,7 +67,7 @@
 
       header {
         position: relative;   // so that the stacking order works correctly: https://developers.google.com/web/updates/2012/09/Stacking-Changes-Coming-to-position-fixed-elements
-        margin:   8px;
+        margin:   8px 8px 0 8px;
         overflow: hidden;
 
         ul.details {
